--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "@htmlacademy/editorconfig-cli": "1.x",
     "autoprefixer": "9.5.x",
     "browser-sync": "2.26.x",
+    "del": "^5.0.0",
     "gulp": "^4.0.2",
+    "gulp-csso": "^3.0.1",
+    "gulp-imagemin": "^6.0.0",
     "gulp-less": "^4.0.1",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
+    "gulp-rename": "^1.4.0",
     "gulp-sourcemaps": "2.6.x",
+    "gulp-webp": "^4.0.1",
     "pixel-glass": "^1.0.13",
+    "posthtml-include": "^1.2.0",
     "stylelint": "10.1.x",
     "stylelint-config-htmlacademy": "0.1.x"
   },
@@ -20,7 +26,7 @@
     "editorconfig": "editorconfig-cli",
     "stylelint": "stylelint \"source/less/**/*.less\" --syntax less",
     "test": "npm run editorconfig && npm run stylelint",
-    "build": "gulp css",
+    "build": "gulp build",
     "start": "gulp start"
   },
   "browserslist": [
