--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sourcemaps": "2.6.x",
     "gulp-webp": "^4.0.1",
-    "pixel-glass": "^1.0.13",
+    "postcss-object-fit-images": "^1.1.2",
     "posthtml-include": "^1.2.0",
     "stylelint": "10.1.x",
     "stylelint-config-htmlacademy": "0.1.x"
